# python-boilerplate

./: cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  cli.py  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: usecases.py
